default/objects/Case_line_Item__c/Case_line_Item__c.object-meta.xml
<CustomObject>
    <label>Case line Item</label>
    <nameField>
        <displayFormat>CLI-{000000}</displayFormat>
        <label>Case line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>