default/objects/Case_line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case line Items</relationshipLabel>
    <relationshipName>Case_line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>