default/objects/Case_line_Item__c/fields/Affected_Part_No__c.field-meta.xml
<CustomField>
    <fullName>Affected_Part_No__c</fullName>
    <label>Affected Part No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>