default/objects/Case_line_Item__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Case line Items</relationshipLabel>
    <relationshipName>Case_line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>