default/objects/Case_line_Item__c/fields/Breakdown_Duration__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Duration__c</fullName>
    <label>Breakdown Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>