default/objects/Case_line_Item__c/fields/Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Number__c</fullName>
    <label>Equipment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>