default/objects/Case_line_Item__c/fields/Machine_No__c.field-meta.xml
<CustomField>
    <fullName>Machine_No__c</fullName>
    <label>Machine No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>