default/objects/Case_line_Item__c/fields/Malfunctiong_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Malfunctiong_End_Date__c</fullName>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>