default/objects/Case_line_Item__c/fields/Malfunctiong_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Malfunctiong_End_Time__c</fullName>
    <label>Resolution Time</label>
    <type>Time</type>
</CustomField>