default/objects/Case_line_Item__c/fields/Malfunctiong_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Malfunctiong_Start_Date__c</fullName>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>