default/objects/Case_line_Item__c/fields/Malfunctiong_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Malfunctiong_Start_Time__c</fullName>
    <label>Reporting Time</label>
    <type>Time</type>
</CustomField>