default/objects/Case_line_Item__c/fields/Part_Sl_No_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Part_Sl_No_Batch_No__c</fullName>
    <label>Part Sl.No. /Batch No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>