default/objects/Case_line_Item__c/validationRules/Validate_CaselineItemProduct_Family_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_CaselineItemProduct_Family_same</fullName>
    <active>true</active>
    <errorConditionFormula>Text( Case__r.Product_Family__c) &lt;&gt; Text(  Asset__r.Product2.Family)</errorConditionFormula>
    <errorMessage>Please make Sure Case Product Family and Asset product family is same</errorMessage>
</ValidationRule>